Protogenchik 0.1.1
- Improved code.
- Bugs fixed.